agregar una descripcion con lorem ipsum para ver como se veria la descripcion

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       <span>Hola mundo</span>
       <span>Esto es un cambio</span>
       <span>Daniel Saldarriaga</span>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel, natus ut iusto esse
+        distinctio rerum cumque earum commodi rem omnis dicta voluptas tempore quibusdam accusamus
+        odit? Distinctio eligendi quas ea.
+      </p>
     </div>
   </body>
 </html>
